force-app/main/default/objects/Telefono__c/Telefono__c.object-meta.xml
<CustomObject>
    <label>Teléfono</label>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Nombre de Teléfono</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teléfonos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>