force-app/main/default/objects/Telefono__c/fields/areacode__c.field-meta.xml
<CustomField>
    <fullName>areacode__c</fullName>
    <label>Código de área</label>
    <length>6</length>
    <type>Text</type>
</CustomField>