force-app/main/default/objects/Telefono__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Teléfonos</relationshipLabel>
    <relationshipName>Telefonos</relationshipName>
    <type>Lookup</type>
</CustomField>