force-app/main/default/objects/Telefono__c/fields/Contacto__c.field-meta.xml
<CustomField>
    <fullName>Contacto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Teléfonos</relationshipLabel>
    <relationshipName>Tel_fonos</relationshipName>
    <type>Lookup</type>
</CustomField>