force-app/main/default/objects/Telefono__c/fields/DATEUPDATED__c.field-meta.xml
<CustomField>
    <fullName>DATEUPDATED__c</fullName>
    <label>Fecha de la ultima actualización</label>
    <type>Date</type>
</CustomField>