force-app/main/default/objects/Telefono__c/fields/entityid__c.field-meta.xml
<CustomField>
    <fullName>entityid__c</fullName>
    <label>Código del cliente</label>
    <length>25</length>
    <type>Text</type>
</CustomField>