force-app/main/default/objects/Telefono__c/fields/IdExterno__c.field-meta.xml
<CustomField>
    <fullName>IdExterno__c</fullName>
    <description>Formado por código de cliente consecutvo del contacto y consecutivo del número de teléfono</description>
    <externalId>true</externalId>
    <label>IdExterno</label>
    <length>25</length>
    <type>Text</type>
</CustomField>