force-app/main/default/objects/Telefono__c/fields/phonelinenumber__c.field-meta.xml
<CustomField>
    <fullName>phonelinenumber__c</fullName>
    <label>Consecutivo del numero de teléfono</label>
    <length>10</length>
    <type>Text</type>
</CustomField>