force-app/main/default/objects/Telefono__c/fields/phonenumber__c.field-meta.xml
<CustomField>
    <fullName>phonenumber__c</fullName>
    <label>Número de teléfono del cliente</label>
    <type>Phone</type>
</CustomField>