force-app/main/default/objects/Telefono__c/fields/phonetypecode__c.field-meta.xml
<CustomField>
    <fullName>phonetypecode__c</fullName>
    <label>Tipo de télefono del cliente</label>
    <length>10</length>
    <type>Text</type>
</CustomField>