force-app/main/default/objects/Telefono__c/fields/relatedpersonid__c.field-meta.xml
<CustomField>
    <fullName>relatedpersonid__c</fullName>
    <label>Persona relacionada, si existiera</label>
    <length>10</length>
    <type>Text</type>
</CustomField>